# binverse

./: .gitignore  Cargo.toml  README.md
binverse/: Cargo.toml  LICENSE
binverse/src/: error.rs  lib.rs  primitives.rs  serialize.rs  streams.rs  varint.rs
binverse_derive/: Cargo.toml
binverse_derive/src/: lib.rs
src/: error.rs  lib.rs  primitives.rs  serialize.rs  streams.rs  varint.rs
test-suite/: Cargo.toml
test-suite/tests/: macros.rs  reserialize_tests.rs  simple.rs  varint.rs
