[package]
name = "binverse"
version = "0.1.0"
authors = ["Linus Dikomey"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/LinusDikomey/binverse"
description = """
Fast binary serialization with versioning.
"""
keywords = ["serialization", "binary", "version", "decode", "encode"]
categories = ["encoding"]
edition = "2021"