[package]
name = "binverse"
version = "0.6.1"
authors = ["Linus Dikomey"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/LinusDikomey/binverse"
description = """
Fast binary serialization with versioning.
"""
keywords = ["serialization", "binary", "version", "decode", "encode"]
categories = ["encoding"]
edition = "2021"

[features]

[dependencies]
binverse_derive = { version = "=0.6.1", path = "../binverse_derive" }