[package]
name = "binverse_derive"
version = "0.5.0"
authors = ["Linus Dikomey"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/LinusDikomey/binverse"
description = """
Macros for the binverse crate providing fast binary serialization with versioning.
"""
keywords = ["serialization", "binary", "version", "decode", "encode"]
categories = ["encoding"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"